<resources>
    <string name="app_name">MajorAssignment-2_StudentInfo</string>
    <string name="student_information">Student Information</string>
    <string name="add_new_student">Add New Student</string>
    <string name="student_name">Student Name</string>
    <string name="student_number">Student Number</string>
    <string name="student_email">Student Email</string>
    <string name="course_name">Course Name</string>
    <string name="add_student">Add Student</string>
    <string name="view_student_list">View Student List</string>
    <string name="list_of_students">List of Students</string>
    <string name="add_fake_data">Add Fake Data</string>
    <string name="click_on_student_to_delete_data">Click on Student to Delete data</string>
</resources>